# splint

./: .cvsignore  .gitignore  BUFFERCHECKING  LICENSE  Makefile.am  Makefile.binary.am  Makefile.binary.in  Makefile.in  README  README.md  aclocal.m4  bootstrap  config.h  config.hin  configure  configure.ac  configure.binary  configure.binary.ac  fixBinaryDist.sh  install.html  readmeSecurityChecking.txt  splint.spec  winconfig.h
doc/: Makefile.am  Makefile.in  faq.txt  freebsd.html  guide.doc  lclint.1  linux.html  manual.doc  manual.htm  realloc.doc  splint.1  sunos.html
doc/html/: faq.html  manual.htm
emacs/: lclint-abbrevs
imports/: Makefile  Makefile.am  Makefile.in
lib/: .cvsignore  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.os2  ansi.h  ansi.lcd  ansistrict.lcd  bool.h  file.mts  posix.h  posix.lcd  posixstrict.lcd  standard.h  stdio.h  stdlib.h  tainted.xh  unix.h  unix.lcd  unixstrict.lcd
os2/: BUILD.OS2  Makefile.os2  README.OS2  config.inc  herald.h  local_constants.h  make.vars  makeos2.cmd  os2config.h.in  run_lclint.cmd  run_splint.cmd  setenv.cmd  setenv.cmd.in
preBuilt/: Makefile.am  Makefile.in
src/: .cvsignore  .splintrc  DATE  Makefile  Makefile.am  Makefile.depend.real  Makefile.in  Makefile.mine  Makefile.nodepend  Makefile.os2  Makefile.sources  Makefile.sys  Makefile.sys-mine  abstract.c  aliasChecks.c  aliasTable.c  annotationInfo.c  annotationTable.c  bison.head  bison.reset  cgrammar.c  cgrammar.c.der  cgrammar.mod  cgrammar.tab.c  cgrammar.tab.h  cgrammar.y  checking.c  clabstract.c  clause.c  clauseStack.c  configure.scan  constraint.c  constraintExpr.c  constraintExprData.c  constraintGeneration.c  constraintList.bak.c  constraintList.c  constraintList2.c  constraintListold.c  constraintOutput.c  (+206 more)
src/Headers/: .cvsignore  CTypesNode.h  abstBodyNode.h  abstract.h  abstractNode.h  aliasChecks.h  aliasStack.h  aliasTable.h  annotationInfo.h  annotationTable.h  arrayQualNode.h  basic.h  bool.h  boolStack.h  cgrammar.h  cgrammar_tokens.h  checking.h  clabstract.h  claimNode.h  clauseStack.h  code.h  constDeclarationNode.h  constants.h  constraint.h  constraintExpr.h  constraintExprData.h  constraintList.h  constraintList2.h  constraintOutput.h  constraintResolve.h  constraintTerm.h  context.h  cpp.h  cpperror.h  cpphash.h  cpplib.h  cprim.h  cscanner.h  cscannerHelp.h  cstring.h  (+241 more)
test/: .cvsignore  Makefile  Makefile-test.os2  Makefile.am  Makefile.in  Makefile.os2  abst_t.lcs  abstptr.lcs  abstptr.out  abstract.out  alias.expect  alias.lcs  alias.out  alias2.lcs  alias3.lcs  alias3.lh  alias4.lcs  alias4.lh  alias5.lcs  alias5.lh  alttypes.out  ansireserved.c  ansireserved.expect  ansireserved.out  argorder.expect  argorder.out  argorder2.lcs  argorder4.lcs  args.lcs  args.out  arrayinit.c  arrayinit.expect  arraylit.expect  blocks.expect  blocks.out  bool.h  break.out  bufferTest.expect  bufferTest.out  bufferTest.outd  (+196 more)
test/bufferTest/: test4.c  test6.c
test/db1/: Makefile  bool.h  bool.lcs  bool.lh  dbase.lcs  dbase.lh  employee.c  employee.h  employee.lcs  employee.lh  empset.lcs  empset.lh  erc.c  erc.h  erc.lcs  erc.lh  eref.c  eref.lcs  eref.lh  ereftab.lcs  ereftab.lh
test/db2/: .cvsignore  Makefile  dbase.lcs  dbase.lh  employee.c  employee.lcs  employee.lh  empset.lcs  empset.lh  erc.c  erc.lcs  erc.lh  eref.lcs  eref.lh  ereftab.lcs  ereftab.lh
test/db3/: Makefile  bool.h  bool.lcl  bool.lcs  bool.lh  check.lcs  check.lh  dbase.c  dbase.lcs  dbase.lh  employee.c  employee.h  employee.lcs  employee.lh  empset.lcs  empset.lh  erc.h  erc.lcs  erc.lh  eref.lcs  eref.lh  ereftab.lcs  ereftab.lh
test/fileio/: Makefile  NOTES  file.mts  filerw.c  filerw.mts
test/for/: Makefile  for.c
test/globalbufferannotation/: Makefile  globalvariable.c
test/manual/: Makefile  updateMyEnv.c  updateMyEnvGood.c
test/maxset/: .lclintrc  Makefile  maxsetannotations.c  maxsetnoannotations.c
test/mergestate/: Makefile
test/metastate/: Makefile  Makefile~  file.mts  filebad.c  osd.c  sockets.mts  struct.c  tainted-bad.mts  tainted.c  tainted.mts  tainted.xh  tainted2.c  tainted4.c
test/moreBufferTests/: Makefile  strncatReallyGood.c  strrchr.c
test/moreBufferTests2/: Makefile  def.c  fixedArrayType.c  unknownsize.c
test/simplebufferConstraintTests/: .lclintrc  Makefile  m.c  sizeof.c
test/strchr/: .splintrc  Makefile  strchr.c
test/tainted/: Makefile  Makefile.os2  Makefile~  tainted.mts~  tainted.xh  tainted3.c~  tainted4.c~  tainted5.c~  taintedimplicit.c~  taintedmerge.c~
test/temp/: Call:  alias3.c  alias3.h  alias3.lcl  alias3.lcs  alias3.lh  bool.h  case.c  employee.c  employee.lcl  employee.lcs  employee.lh  enumadd.c  freearray.c  gethostbyname.c  malloc  names.c  onlyret.c  outglob.c  outglob.lcs  pmalloc.c  stack.c  test.c  ud2.c  union.c  unrecog.c  yeates  yeates.c
test/tests2.2/: .cvsignore  Makefile  Makefile-tests2.2.os2  bool.lcs  boolops.c  libraries.lcd  obsolete.lcd  oldversion.lcd
test/tests2.4/: Makefile  Makefile-tests2.4.os2
test/tests2.4/subdir/: .cvsignore  main.lcs
test/tests2.5/: .cvsignore  Makefile  Makefile~  booltest.c  hoof.c  newlint.lcd  ull.c~
test/warnuse/: Makefile  warnuse.lcd
win32/: README.1ST
win32/Splint/: SPLINT.DSW  Splint.dsp  Splint.sln  Splint.vcproj
